Added manage product function

--- a/FishSellingOnline/appsettings.json
+++ b/FishSellingOnline/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FishSellingOnlineContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FishSellingOnline;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "FishSellingOnlineContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FishSellingOnline;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "FishSellingOnlineProductContext": "Server=(localdb)\\mssqllocaldb;Database=FishSellingOnlineProductContext-cbe3e599-03d5-44fe-9079-3685f97ceb9d;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
