--- a/FishSellingOnline/appsettings.json
+++ b/FishSellingOnline/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FishSellingOnlineContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FishSellingOnline;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "FishSellingOnlineProductContext": "Server=(localdb)\\mssqllocaldb;Database=FishSellingOnlineProductContext-cbe3e599-03d5-44fe-9079-3685f97ceb9d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "FishSellingOnlineContextConnection": "Server=tcp:fishsellingonline.database.windows.net,1433;Initial Catalog=fishsellingonline;Persist Security Info=False;User ID=Admin1234;Password=Admi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "FishSellingOnlineProductContext": "Server=tcp:fishsellingonline.database.windows.net,1433;Initial Catalog=fishsellingonlineitem;Persist Security Info=False;User ID=Admin1234;Password=Admi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
