--- a/.github/workflows/FishSellingOnline20210731234013.yml
+++ b/.github/workflows/FishSellingOnline20210731234013.yml
@@ -37,3 +37,8 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+         - name: Clear artifacts
+        uses: kolpav/purge-artifacts-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          expire-in: 1hr
